--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "calculator",
+    "name": "Calculadora",
     "slug": "calculator",
     "version": "1.0.0",
     "orientation": "portrait",
